@@ -12,8 +12,10 @@ import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
+import java.net.URLEncoder;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -27,6 +29,7 @@ import java.util.logging.Logger;
 
 import javax.xml.bind.JAXBException;
 
+import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.csstudio.diirt.util.core.preferences.ExceptionUtilities.CompoundIOException;
 import org.csstudio.diirt.util.core.preferences.pojo.ChannelAccess;
@@ -120,8 +123,14 @@ public final class DIIRTPreferences {
 
             try {
                 path = resolvePlatformPath(path);
-            } catch ( IOException | NullPointerException | IllegalArgumentException ex ) {
-                return NLS.bind(Messages.DIIRTPreferences_verifyDIIRTPath_resolvingPath_message, path);
+            } catch ( IOException | NullPointerException | IllegalArgumentException | URISyntaxException ex ) {
+
+                String message = NLS.bind(Messages.DIIRTPreferences_verifyDIIRTPath_resolvingPath_message, path);
+
+                LOGGER.log(Level.WARNING, MessageFormat.format("{0}\n{1}", message, ExceptionUtilities.reducedStackTrace(ex, "org.csstudio")));
+
+                return message;
+
             }
 
             if ( !StringUtils.equals(beforeResolving, path) ) {
@@ -152,10 +161,13 @@ public final class DIIRTPreferences {
      * @throws IOException If {@code path} cannot be resolved.
      * @throws NullPointerException If {@code path} is {@code null}.
      * @throws IllegalArgumentException If {@code path} is empty or blank.
+     * @throws URISyntaxException If {@code path} cannot be resolved to a filesystem pathname.
      */
     public static String resolvePlatformPath ( String path )
-            throws MalformedURLException, IOException, NullPointerException, IllegalArgumentException
+            throws MalformedURLException, IOException, NullPointerException, IllegalArgumentException, URISyntaxException
     {
+
+        LOGGER.log(Level.FINE, "About to resolve platform path [path: {0}].", path);
 
         if ( path == null ) {
             throw new NullPointerException("Null 'path'.");
@@ -168,7 +180,29 @@ public final class DIIRTPreferences {
         }
 
         if ( path.startsWith(PLATFORM_URI_PREFIX) ) {
-            return FileLocator.resolve(new URL(path)).getPath().toString();
+
+            URL resolvedURL = FileLocator.resolve(new URL(path));
+
+            LOGGER.log(Level.FINE, "Resolved URL\n    before: {0}\n     after: {1}", new Object[] { path, resolvedURL.toString() });
+
+            String escapedURL = htmlEncode(resolvedURL.toExternalForm());
+
+            LOGGER.log(Level.FINE, "Escaped URL\n    before: {0}\n     after: {1}", new Object[] { resolvedURL.toString(), escapedURL });
+
+            URI resolvedURI = new URI(escapedURL);
+
+            LOGGER.log(Level.FINE, "Resolved URI\n    before: {0}\n     after: {1}", new Object[] { escapedURL, resolvedURI.toString() });
+
+            File resolvedFile = URIUtil.toFile(resolvedURI);
+
+            LOGGER.log(Level.FINE, "Resolved File\n    before: {0}\n     after: {1}", new Object[] { resolvedURI.toString(), resolvedFile.toString() });
+
+            String resolvedString = resolvedFile.getCanonicalPath();
+
+            LOGGER.log(Level.FINE, "Resolved String\n    before: {0}\n     after: {1}", new Object[] { resolvedFile.toString(), resolvedString });
+
+            return resolvedString;
+
         } else {
             return new File(path).getCanonicalPath();
         }
@@ -195,7 +229,7 @@ public final class DIIRTPreferences {
                     try {
                         diirtHome = URIUtil.toFile(URIUtil.append(location.getURL().toURI(), "diirt")).toString();
                     } catch ( URISyntaxException ex ) {
-                        LOGGER.log(Level.WARNING, MessageFormat.format("Unable to setup fallback DIIRT directory [{0}].", location.toString()), ex);
+                        LOGGER.log(Level.WARNING, MessageFormat.format("Unable to setup fallback DIIRT directory [{0}].\n{1}", location.toString(), ExceptionUtilities.reducedStackTrace(ex, "org.csstudio")));
                     }
                 }
 
@@ -215,8 +249,8 @@ public final class DIIRTPreferences {
                     fromFiles(new File(diirtHome));
                     setString(PREF_CONFIGURATION_DIRECTORY, diirtHome);
 
-                } catch ( NullPointerException | IllegalArgumentException | IOException ex ) {
-                    LOGGER.log(Level.WARNING, MessageFormat.format("Unable to resolve DIIRT directory [{0}].", diirtHome), ex);
+                } catch ( NullPointerException | IllegalArgumentException | IOException | URISyntaxException ex ) {
+                    LOGGER.log(Level.WARNING, MessageFormat.format("Unable to resolve DIIRT directory [{0}].\n{1}", diirtHome, ExceptionUtilities.reducedStackTrace(ex, "org.csstudio")));
                 }
             }
 
@@ -225,7 +259,7 @@ public final class DIIRTPreferences {
             try {
                 flush();
             } catch ( BackingStoreException ex ) {
-                LOGGER.log(Level.WARNING, "Unable to flush preferences.", ex);
+                LOGGER.log(Level.WARNING, "Unable to flush preferences.\n{0}", ExceptionUtilities.reducedStackTrace(ex, "org.csstudio"));
             }
 
         }
@@ -307,6 +341,35 @@ public final class DIIRTPreferences {
         }
 
         return diirtHome;
+
+    }
+
+    /**
+     * Returns whether the named preference is known to this preference store.
+     *
+     * @param name The name of the preference.
+     * @return {@code true} if either a current value or a default value is
+     *         known for the named preference, and {@code false} otherwise.
+     */
+    public boolean contains ( String name ) {
+
+        String value;
+
+        if ( preferencesService != null ) {
+            value = preferencesService.getString(QUALIFIER, name, null, null);
+        } else {
+            value = getPreferences().get(name, null);
+        }
+
+        if ( value == null ) {
+            if ( preferencesService != null ) {
+                value = preferencesService.getString(QUALIFIER, defaultPreferenceName(name), null, null);
+            } else {
+                value = getPreferences().get(defaultPreferenceName(name), null);
+            }
+        }
+
+        return ( value != null );
 
     }
 
@@ -831,6 +894,14 @@ public final class DIIRTPreferences {
 
     }
 
+    /**
+     * This method is copied from {@link IOUtils} because when it is
+     * used (inside the runtime shutdown hook) all OSGI modules are
+     * already disposed.
+     *
+     * @param directory
+     * @throws IOException
+     */
     private static void cleanDirectory ( final File directory ) throws IOException {
 
         final File[] files = verifiedListFiles(directory);
@@ -850,6 +921,14 @@ public final class DIIRTPreferences {
 
     }
 
+    /**
+     * This method is copied from {@link IOUtils} because when it is
+     * used (inside the runtime shutdown hook) all OSGI modules are
+     * already disposed.
+     *
+     * @param directory
+     * @throws IOException
+     */
     private static void deleteDirectory ( final File directory ) throws IOException {
 
         if ( !directory.exists() ) {
@@ -867,6 +946,14 @@ public final class DIIRTPreferences {
 
     }
 
+    /**
+     * This method is copied from {@link IOUtils} because when it is
+     * used (inside the runtime shutdown hook) all OSGI modules are
+     * already disposed.
+     *
+     * @param file
+     * @return
+     */
     private static boolean deleteQuietly ( final File file ) {
 
         if ( file == null ) {
@@ -888,6 +975,14 @@ public final class DIIRTPreferences {
 
     }
 
+    /**
+     * This method is copied from {@link IOUtils} because when it is
+     * used (inside the runtime shutdown hook) all OSGI modules are
+     * already disposed.
+     *
+     * @param file
+     * @throws IOException
+     */
     private static void forceDelete ( final File file ) throws IOException {
 
         if ( file.isDirectory() ) {
@@ -909,6 +1004,133 @@ public final class DIIRTPreferences {
 
     }
 
+    /**
+     * Encode the given URL string.
+     * <p>
+     * <b>Note:</b> {@link URIUtil#toFile(URI)} requires the URI to be encoded
+     * otherwise the filesystem mapping will work. The whole URI must be encoded
+     * but in a sensible way: this is why {@link URLEncoder#encode(String)}
+     * cannot be used.
+     * <p>
+     * This implementation is based on testing each "switch case" on MacOS X,
+     * Linux (CentOS 7.1) and Windows 7 against {@link URIUtil#toFile(URI)}.
+     *
+     * @param s The string to be encoded.
+     * @return The encoded string.
+     */
+    private static String htmlEncode ( String s ) {
+
+        if ( StringUtils.isBlank(s) ) {
+            return s;
+        }
+
+        StringBuilder sb = new StringBuilder(s.length() + 16);
+
+        for ( int i = 0; i < s.length(); i++ ) {
+
+            char c = s.charAt(i);
+
+            switch ( c ) {
+                case ' ':
+                    sb.append("%20");
+                    break;
+                case '!':
+                    sb.append("%21");
+                    break;
+                case '#':
+                    sb.append("%23");
+                    break;
+                case '$':
+                    sb.append("%24");
+                    break;
+                case '%':
+                    sb.append("%25");
+                    break;
+                case '&':
+                    sb.append("%26");
+                    break;
+                case '\'':
+                    sb.append("%27");
+                    break;
+                case '(':
+                    sb.append("%28");
+                    break;
+                case ')':
+                    sb.append("%29");
+                    break;
+                case '*':
+                    sb.append("%2A");
+                    break;
+                case '+':
+                    sb.append("%2B");
+                    break;
+                case ',':
+                    sb.append("%2C");
+                    break;
+                case '<':
+                    sb.append("%3C");
+                    break;
+                case '=':
+                    sb.append("%3D");
+                    break;
+                case '>':
+                    sb.append("%3E");
+                    break;
+                case '?':
+                    sb.append("%3F");
+                    break;
+                case '@':
+                    sb.append("%40");
+                    break;
+                case '[':
+                    sb.append("%5B");
+                    break;
+                case ']':
+                    sb.append("%5D");
+                    break;
+                case '^':
+                    sb.append("%5E");
+                    break;
+                case '`':
+                    sb.append("%60");
+                    break;
+                case '{':
+                    sb.append("%7B");
+                    break;
+                case '|':
+                    sb.append("%7C");
+                    break;
+                case '}':
+                    sb.append("%7D");
+                    break;
+                case '"':   //  %22
+                case '-':   //  %2D
+                case '.':   //  %2E
+                case '/':   //  %2F
+                case ':':   //  %3A
+                case ';':   //  %3B
+                case '\\':  //  %5C
+                case '_':   //  %5F
+                case '~':   //  %7E
+                default:
+                    sb.append(c);
+            }
+
+        }
+
+        return sb.toString();
+
+    }
+
+    /**
+     * This method is copied from {@link IOUtils} because when it is
+     * used (inside the runtime shutdown hook) all OSGI modules are
+     * already disposed.
+     *
+     * @param directory
+     * @return
+     * @throws IOException
+     */
     private static File[] verifiedListFiles ( File directory ) throws IOException {
 
         if ( !directory.exists() ) {
